hack layout break mobile... fix me cass

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -161,7 +161,7 @@ input:not([type=submit]):not([type=file]):active, input:not([type=submit]):not([
 .wrapper{
 	width:90%;
 	max-width:760px;
-	margin:0 auto;
+  margin-left: 75px;
 }
 
 .left{
